--- a/HTML/sing-in.html
+++ b/HTML/sing-in.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="head">
             <div class="head__logo">
-                <a href="./asosiy.html">
+                <a href="./index.html">
                     <i class="fa-regular fa-moon" style="color: #ffffff;"></i>
                     <span>THE BEST STREAM</span>
                 </a>
