--- a/HTML/cabinet.html
+++ b/HTML/cabinet.html
@@ -12,8 +12,11 @@
     <div class="container">
         <div class="head">
             <div class="head__logo">
+               <a href="./index.html"> 
                 <i class="fa-regular fa-moon" style="color: #ffffff;"></i>
                 <span>THE BEST STREAM</span>
+            </a>
+                
             </div>
             <div class="head__search">
                 <form >
